# T1

./: .env.example  .gitignore  AGENTS.md  DEPLOYMENT.md  Dockerfile  README.md  README_BEFORE_ANY_CHANGES_KNOWLEDGE.md  README_KNOWLEDGE_INTEGRATION.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project.index.json  pyproject.toml  replit.md  tsconfig.json  vercel.json  wrangler.jsonc
ai-workspace/: README.md
api/: index.ts
deployment/: MANUS_PROMPT.md  README.md  asset-pipeline.env.example  bootstrap.mjs  manus.mjs  network-access.env.example  replit.mjs  termux.sh
docs/: AI_GAME_CREATOR.md  ASSET_PIPELINE.md  BLACKMAIL_SYSTEM.md  CODING_AGENT.md  CONVERSATION_ARCHIVE_MANIFEST.md  GEO_WORLD.md  GOOGLE_MAPS_DENMARK_WORLD_SPEC.md  GRAPHICS_PLATFORM_PLAN.md  GUI_PATTERN_INTEGRATION.md  MASTER_PROMPT_OPERATION_KOBENHAVN.md  MMO_SECURITY_REVIEW.md  MMO_THREEJS_ROADMAP.md  NETWORK_ACCESS.md  OBSERVABILITY.md  README_BEFORE_ANY_CHANGES.md  STRATEGY_ECS_ANALYSIS.md  SYNDICATE_SYSTEM.md  T1_SIMULATION_CONTRACT.md  TEAM_DYNAMICS.md  VERCEL_DEPLOYMENT.md  WORKSPACE_AND_GAME_BUILDER.md  chat-commands.md
features/: README.md
integrations/: analytics-map-catalog.json  free-llm-providers.json
knowledge/: README.md  roadmap.md
patches/: agents-sms-cache.patch  agents-sms-pivots.patch
plugins/: README.md  plugin.example.json
prompts/: DEVIN_GOOGLE_MAPS_DENMARK_STREAMING.md  DEVIN_T1_DENMARK_RPG_V2.md
rag/: PRESERVATION_POLICY.md
scripts/: agents-sms-smoke-test.mjs  build-vercel.mjs  check-rag-preservation.mjs  dev.sh  extract_document.py  knowledge_indexer.py  (+13 more)
(+476 files in other folders)
