[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-framework"
version = "0.1.0"
description = "Mobile-first memory, writing studio, and multi-account GitHub MCP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "cryptography==45.0.7",
  "fastapi==0.116.1",
  "httpx==0.28.1",
  "mcp==1.13.1",
  "pydantic==2.11.7",
  "python-multipart==0.0.20",
  "typing-extensions==4.15.0",
  "uvicorn[standard]==0.35.0",
]

[project.optional-dependencies]
dev = [
  "mypy==1.17.1",
  "pytest==8.4.1",
  "pytest-cov==6.2.1",
  "ruff==0.12.8",
]

[project.scripts]
personal-framework-api = "personal_framework.main:run"
personal-framework-mcp = "personal_framework.mcp_server:run"

[tool.setuptools]
package-dir = {"" = "services/backend/src"}

[tool.setuptools.packages.find]
where = ["services/backend/src"]

[tool.pytest.ini_options]
testpaths = ["services/backend/tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["personal_framework"]
mypy_path = "services/backend/src"
